--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitea - Blockchain Social Media</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=8">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <h1>⛓️ Bitea</h1>
+                <h1>[CHAIN] Bitea</h1>
                 <span class="tagline">Decentralized Social Media</span>
             </div>
             <div class="nav-menu" id="navMenu">
                 <a href="#" onclick="showPage('feed')" class="nav-link">Feed</a>
+                <a href="#" onclick="showPage('topics')" class="nav-link">bitCafe</a>
                 <a href="#" onclick="showPage('blockchain')" class="nav-link">Blockchain</a>
+                <a href="#" onclick="showPage('stats')" class="nav-link">Stats</a>
                 <a href="#" onclick="showPage('profile')" class="nav-link" id="profileLink" style="display:none;">Profile</a>
                 <a href="#" onclick="logout()" class="nav-link" id="logoutBtn" style="display:none;">Logout</a>
                 <a href="#" onclick="showPage('login')" class="nav-link" id="loginBtn">Login</a>
@@ -62,7 +64,9 @@
                 <div class="create-post-box">
                     <h3>Create a Post</h3>
                     <textarea id="postContent" placeholder="What's on your mind? (This will be immortalized on the blockchain...)" class="textarea-field"></textarea>
-                    <button onclick="createPost()" class="btn btn-primary">Post to Blockchain</button>
+                    <div class="post-button-container">
+                        <button onclick="createPost()" class="btn btn-primary">Post to Blockchain</button>
+                    </div>
                 </div>
 
                 <div class="stats-bar">
@@ -82,6 +86,46 @@
 
                 <div id="postsContainer" class="posts-container">
                     <!-- Posts will be loaded here -->
+                </div>
+            </div>
+        </div>
+
+        <!-- bitCafe Page -->
+        <div id="topicsPage" class="page">
+            <div class="topics-layout">
+                <!-- Main Content Area -->
+                <div class="topics-main">
+                    <h2>[CAFE] bitCafe - Discussion Hub</h2>
+                    <p class="subtitle">Grab a bitCup and join blockchain-verified discussions</p>
+
+                    <!-- Search and Create -->
+                    <div class="topics-header">
+                        <div class="topic-search-box">
+                            <input type="text" id="topicSearchInput" placeholder="[?] Search bitCups..." class="input-field" oninput="searchTopics()">
+                        </div>
+                        <button onclick="showCreateTopicModal()" class="btn btn-primary">[CAFE] Create bitCup</button>
+                    </div>
+
+                    <!-- bitCups List -->
+                    <div id="topicsContainer" class="topics-container">
+                        <!-- bitCups will be loaded here -->
+                    </div>
+
+                    <!-- bitCup Detail View (Hidden by default) -->
+                    <div id="topicDetailView" class="topic-detail-view" style="display:none;">
+                        <button onclick="hideTopicDetail()" class="btn btn-secondary btn-small">← Back to bitCafe</button>
+                        <div id="topicDetailContent">
+                            <!-- bitCup details will be loaded here -->
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Sidebar -->
+                <div class="topics-sidebar">
+                    <h3>[CHAIN] Recent bitCups on Chain</h3>
+                    <div id="recentTopicsSidebar">
+                        <!-- Recent bitCups will be loaded here -->
+                    </div>
                 </div>
             </div>
         </div>
@@ -106,6 +150,185 @@
             </div>
         </div>
 
+        <!-- Stats Page -->
+        <div id="statsPage" class="page">
+            <div class="stats-container">
+                <h2>[DATA] Blockchain Analytics</h2>
+                <p class="subtitle">Comprehensive network statistics and performance metrics</p>
+
+                <!-- Chain Overview -->
+                <div class="stats-section">
+                    <h3 class="section-title">[CHAIN] Chain Overview</h3>
+                    <table class="stats-table">
+                        <thead>
+                            <tr>
+                                <th>Metric</th>
+                                <th>Value</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>[#] Total Blocks</td>
+                                <td class="stat-value-cell" id="stat-blocks">0</td>
+                                <td>Number of blocks in the chain</td>
+                            </tr>
+                            <tr>
+                                <td>[TX] Total Transactions</td>
+                                <td class="stat-value-cell" id="stat-total-tx">0</td>
+                                <td>All transactions across the chain</td>
+                            </tr>
+                            <tr>
+                                <td>[..] Pending Transactions</td>
+                                <td class="stat-value-cell" id="stat-pending-tx">0</td>
+                                <td>Transactions awaiting mining</td>
+                            </tr>
+                            <tr>
+                                <td>[*] Mining Difficulty</td>
+                                <td class="stat-value-cell" id="stat-difficulty">0</td>
+                                <td>Proof of Work difficulty level</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!-- Performance Metrics -->
+                <div class="stats-section">
+                    <h3 class="section-title">[PERF] Performance Metrics</h3>
+                    <table class="stats-table">
+                        <thead>
+                            <tr>
+                                <th>Metric</th>
+                                <th>Value</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>[T] Avg Block Time</td>
+                                <td class="stat-value-cell" id="stat-avg-block-time">0s</td>
+                                <td>Average time between blocks</td>
+                            </tr>
+                            <tr>
+                                <td>[AVG] Avg TX/Block</td>
+                                <td class="stat-value-cell" id="stat-avg-tx-per-block">0</td>
+                                <td>Average transactions per block</td>
+                            </tr>
+                            <tr>
+                                <td>[>>] Throughput</td>
+                                <td class="stat-value-cell" id="stat-throughput">0 tx/min</td>
+                                <td>Network transaction rate</td>
+                            </tr>
+                            <tr>
+                                <td>[POW] Avg Nonce</td>
+                                <td class="stat-value-cell" id="stat-avg-nonce">0</td>
+                                <td>Average computational effort</td>
+                            </tr>
+                            <tr>
+                                <td>[%] Chain Utilization</td>
+                                <td class="stat-value-cell" id="stat-utilization">0%</td>
+                                <td>Block capacity usage</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!-- Transaction Statistics -->
+                <div class="stats-section">
+                    <h3 class="section-title">[DIST] Transaction Type Distribution</h3>
+                    <table class="stats-table">
+                        <thead>
+                            <tr>
+                                <th>Transaction Type</th>
+                                <th>Count</th>
+                                <th>Percentage</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>[+] User Registrations</td>
+                                <td class="stat-value-cell" id="stat-tx-register">0</td>
+                                <td id="stat-tx-register-pct">0%</td>
+                            </tr>
+                            <tr>
+                                <td>[POST] Posts</td>
+                                <td class="stat-value-cell" id="stat-tx-posts">0</td>
+                                <td id="stat-tx-posts-pct">0%</td>
+                            </tr>
+                            <tr>
+                                <td>[<3] Likes</td>
+                                <td class="stat-value-cell" id="stat-tx-likes">0</td>
+                                <td id="stat-tx-likes-pct">0%</td>
+                            </tr>
+                            <tr>
+                                <td>[//] Comments</td>
+                                <td class="stat-value-cell" id="stat-tx-comments">0</td>
+                                <td id="stat-tx-comments-pct">0%</td>
+                            </tr>
+                            <tr>
+                                <td>[->] Follows</td>
+                                <td class="stat-value-cell" id="stat-tx-follows">0</td>
+                                <td id="stat-tx-follows-pct">0%</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!-- Network Health -->
+                <div class="stats-section">
+                    <h3 class="section-title">[SYS] Network Health & Security</h3>
+                    <table class="stats-table">
+                        <thead>
+                            <tr>
+                                <th>Parameter</th>
+                                <th>Status</th>
+                                <th>Details</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>[OK] Chain Validity</td>
+                                <td class="stat-value-cell" id="stat-chain-valid">CHECKING...</td>
+                                <td>Cryptographic integrity status</td>
+                            </tr>
+                            <tr>
+                                <td>[SEC] Security Level</td>
+                                <td class="stat-value-cell" id="stat-security-level">N/A</td>
+                                <td>Based on difficulty & chain length</td>
+                            </tr>
+                            <tr>
+                                <td>[NET] Network State</td>
+                                <td class="stat-value-cell" id="stat-network-state">ACTIVE</td>
+                                <td>Overall blockchain status</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!-- Recent Activity -->
+                <div class="stats-section">
+                    <h3 class="section-title">[LOG] Recent Activity (Last 10 Blocks)</h3>
+                    <table class="stats-table activity-table">
+                        <thead>
+                            <tr>
+                                <th>Block #</th>
+                                <th>Time</th>
+                                <th>Transactions</th>
+                                <th>Hash Preview</th>
+                            </tr>
+                        </thead>
+                        <tbody id="recent-activity">
+                            <!-- Activity items will be loaded here -->
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="stats-actions">
+                    <button onclick="loadStats()" class="btn btn-primary">[R] Refresh Stats</button>
+                </div>
+            </div>
+        </div>
+
         <!-- Profile Page -->
         <div id="profilePage" class="page">
             <div class="profile-container">
@@ -117,11 +340,30 @@
         </div>
     </div>
 
+    <!-- Create bitCup Modal -->
+    <div id="createTopicModal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>[CAFE] Create New bitCup</h3>
+                <span class="modal-close" onclick="hideCreateTopicModal()">&times;</span>
+            </div>
+            <div class="modal-body">
+                <input type="text" id="newTopicTitle" placeholder="bitCup Title" class="input-field" maxlength="100">
+                <textarea id="newTopicDescription" placeholder="bitCup Description (optional)" class="textarea-field" style="min-height:100px;"></textarea>
+                <div id="topicMessage" class="message" style="display:none;"></div>
+            </div>
+            <div class="modal-footer">
+                <button onclick="hideCreateTopicModal()" class="btn btn-secondary">Cancel</button>
+                <button onclick="createTopic()" class="btn btn-primary">[CAFE] Brew bitCup on Blockchain</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 Bitea - Blockchain-Powered Social Media</p>
-            <p>Built with C++, JavaScript, MongoDB, and Redis</p>
+            <p>Built by a Quant</p>
         </div>
     </footer>
 
