--- a/frontend/index.html
+++ b/frontend/index.html
@@ -367,6 +367,7 @@
         </div>
     </footer>
 
+    <script src="js/config.js"></script>
     <script src="js/api.js"></script>
     <script src="js/app.js"></script>
 </body>
